--- a/demo/index.html
+++ b/demo/index.html
@@ -2,9 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
+    <script src="../vendor/js-analysis/sources/js/matrixException.js"></script>
+    <script src="../vendor/js-analysis/sources/js/matrix.js"></script>
+    <script src="../sources/js/neuronalNetwork.js"></script>
 </head>
 <body>
-$END$
+    <script>
+
+        var neuronalNetwork = new NeuronalNetwork([2, 2]);
+
+
+
+    </script>
 </body>
 </html>
