--- a/demo/index.html
+++ b/demo/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="../vendor/js-analysis/sources/js/vectorException.js"></script>
+    <script src="../vendor/js-analysis/sources/js/vector.js"></script>
     <script src="../vendor/js-analysis/sources/js/matrixException.js"></script>
     <script src="../vendor/js-analysis/sources/js/matrix.js"></script>
     <script src="../sources/js/neuronalNetwork.js"></script>
