--- a/demo/index.html
+++ b/demo/index.html
@@ -12,9 +12,11 @@
 <body>
     <script>
 
-        var neuronalNetwork = new NeuronalNetwork([2, 2]);
+        var neuronalNetwork = new NeuronalNetwork([3, 3]);
 
+        var output = neuronalNetwork.calculateOutput(new Vector([0.9, 0.1, 0.8]));
 
+        console.log(output.array);
 
     </script>
 </body>
