add sources; fix multiply call

--- a/demo/index.html
+++ b/demo/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="../vendor/js-analysis/sources/js/base.js"></script>
     <script src="../vendor/js-analysis/sources/js/vectorException.js"></script>
     <script src="../vendor/js-analysis/sources/js/vector.js"></script>
     <script src="../vendor/js-analysis/sources/js/matrixException.js"></script>
     <script src="../vendor/js-analysis/sources/js/matrix.js"></script>
+    <script src="../tests/js/vector.js"></script>
+    <script src="../tests/js/matrix.js"></script>
     <script src="../sources/js/neuronalNetwork.js"></script>
 </head>
 <body>
