--- a/demo/index.html
+++ b/demo/index.html
@@ -15,11 +15,13 @@
 
         var neuronalNetwork = new NeuronalNetwork([2, 2], true);
 
-        var output = neuronalNetwork.calculateOutput(new Vector([0.7, 0.6]));
+        var input    = new Vector([0.7, 0.6]);
+        var expected = new Vector([0.9, 0.2]);
+        // var output = neuronalNetwork.calculateOutput(input);
+        //
+        // console.log(JSON.stringify(output.array)); // prints [0.6546591654993577,0.5499865411657244]
 
-
-
-        console.log(JSON.stringify(output.array)); // prints [0.6546591654993577,0.5499865411657244]
+        var output = neuronalNetwork.train(input, expected);
 
     </script>
 </body>
