--- a/demo/index.html
+++ b/demo/index.html
@@ -8,25 +8,42 @@
     <script src="../vendor/js-analysis/sources/js/vector.js"></script>
     <script src="../vendor/js-analysis/sources/js/matrixException.js"></script>
     <script src="../vendor/js-analysis/sources/js/matrix.js"></script>
+    <script src="../sources/js/baseNeuronalNetwork.js"></script>
+    <script src="../sources/js/neuronalNetworkException.js"></script>
     <script src="../sources/js/neuronalNetwork.js"></script>
 </head>
 <body>
     <script>
 
-        var neuronalNetwork = new NeuronalNetwork([2, 2], true);
+        var weightMatrices1 =  [
+            new Matrix([[0.9, 0.3, 0.4], [0.2, 0.8, 0.2], [0.1, 0.5, 0.6]]),
+            new Matrix([[0.3, 0.7, 0.5], [0.6, 0.5, 0.2], [0.8, 0.1, 0.9]])
+        ];
 
-        var input    = new Vector([0.7, 0.6]);
-        var expected = new Vector([0.9, 0.2]);
+        var weightMatrices2 = [
+            new Matrix([[0.3, 0.8, 0.5], [-0.2, -0.6, 0.7]]),
+            new Matrix([[0.2, 0.4, 0.3], [0.1, -0.4, 0.9]])
+        ];
 
-        var output = neuronalNetwork.calculateOutput(input);
-        console.log(JSON.stringify(output.array));
+        var planes = [2, 2, 2];
 
-        for (var i = 0; i < 100; i++) {
-            neuronalNetwork.train(input, expected);
-        }
+        var neuronalNetwork = new NeuronalNetwork(planes);
 
-        var output = neuronalNetwork.calculateOutput(input, true);
-        console.log(JSON.stringify(output.array));
+        console.log(JSON.stringify(neuronalNetwork.weightMatrixArray));
+        console.log(JSON.stringify(neuronalNetwork.planes));
+
+        // var input    = new Vector([0.7, 0.6]);
+        // var expected = new Vector([0.9, 0.2]);
+        //
+        // var output = neuronalNetwork.calculateOutput(input);
+        // console.log(JSON.stringify(output.array));
+        //
+        // for (var i = 0; i < 100; i++) {
+        //     neuronalNetwork.train(input, expected);
+        // }
+        //
+        // var output = neuronalNetwork.calculateOutput(input, true);
+        // console.log(JSON.stringify(output.array));
 
         //weightMatrix 0 [[0.49780517318759615,0.9384636212313185,0.6186831039125569],[-0.2524339263095204,-0.6367037484166632,0.668539644214286]]
         //weightMatrix 1 [[1.0411521616164443,1.066592253188244,0.656738609311879],[-0.7444001398255222,-1.0613387662299698,0.5393075256542736]]
