--- a/tests/neuronalNetwork.html
+++ b/tests/neuronalNetwork.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>js-analysis - Matrix - Test</title>
+    <title>Neuronal Network - Tests</title>
     <script src="../vendor/js-analysis/sources/js/base.js"></script>
     <script src="../vendor/js-analysis/sources/js/vectorException.js"></script>
     <script src="../vendor/js-analysis/sources/js/vector.js"></script>
