--- a/demo/index.html
+++ b/demo/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Neuronal Network - Demo</title>
     <script src="../vendor/js-analysis/sources/js/base.js"></script>
     <script src="../vendor/js-analysis/sources/js/vectorException.js"></script>
     <script src="../vendor/js-analysis/sources/js/vector.js"></script>
