refactoring test framework

--- a/tests/neuronalNetwork.html
+++ b/tests/neuronalNetwork.html
@@ -17,8 +17,7 @@
 <body>
 <script>
 
-    Test.startTests(startNeuronalNetworkTest);
-    Test.resultTests();
+    Test.startTests(document.title, startNeuronalNetworkTest);
 
 </script>
 </body>
