--- a/tests/neuronalNetwork.html
+++ b/tests/neuronalNetwork.html
@@ -3,21 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Neuronal Network - Tests</title>
+
+    <script src="../vendor/js-testing-framework/sources/js/jsTestException.js"></script>
+    <script src="../vendor/js-testing-framework/sources/js/jsTest.js"></script>
+
     <script src="../vendor/js-analysis/sources/js/base.js"></script>
-    <script src="../vendor/js-analysis/sources/js/vectorException.js"></script>
     <script src="../vendor/js-analysis/sources/js/vector.js"></script>
-    <script src="../vendor/js-analysis/sources/js/matrixException.js"></script>
     <script src="../vendor/js-analysis/sources/js/matrix.js"></script>
-    <script src="../vendor/js-analysis/sources/js/test.js"></script>
+
     <script src="../sources/js/baseNeuronalNetwork.js"></script>
-    <script src="../sources/js/neuronalNetworkException.js"></script>
     <script src="../sources/js/neuronalNetwork.js"></script>
     <script src="../tests/js/neuronalNetwork.js"></script>
 </head>
 <body>
 <script>
 
-    Test.startTests(document.title, startNeuronalNetworkTest);
+    JsTest.startTests(document.title, startNeuronalNetworkTest);
 
 </script>
 </body>
